# hw9-personal-assistant-with-sqlalchemy-and-alembic

./: .gitignore  LICENSE  README.md  config.ini  pyproject.toml
assistant/: setup.py
assistant/assistant/: contact_book.py  decorators.py  help.py  main.py  note_book.py  parser.py  sort.py
assistant/assistant/database/: crud_contact.py  crud_note.py  db.py  models.py  repository_contact.py
fill/: contacts.py  note_m2m_tag.py
fill_database/: contacts.py  note_m2m_tag.py  notes.py  tags.py
migrations/: env.py
migrations/versions/: 215310b0e565_init.py  39561f35e023_dell_column_cell_phones.py  3fb857046c1b_init.py  645bb9be7001_change_name_column.py  8c6ee04a1d6f_add_table_phones.py  a058a5b840f9_edit_models_for_delete_cascade.py  bb5cd655deb7_init.py  c3f5ee51d614_add_phones_table.py
