[tool.poetry]
name = "hw9-personal-assistant-with-sqlalchemy-and-alembic"
version = "0.1.0"
description = ""
authors = ["PavelStelmakhV <stelmahpv13@gmail.com>"]
readme = "README.md"
packages = [{include = "hw9_personal_assistant_with_sqlalchemy_and_alembic"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^1.4.45"
alembic = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
